--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   "dependencies": {
     "@types/express": "^4.16.1",
     "@types/react-monaco-editor": "^0.16.0",
+    "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "^4.1.6",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.0",
     "express": "^4.16.4",
     "monaco-editor-webpack-plugin": "^1.7.0",
+    "monaco-languageclient": "^0.9.0",
     "next": "^7.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-monaco-editor": "^0.22.0",
+    "react-split-pane": "^0.1.85",
+    "socket.io-client": "^2.2.0",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
