--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
+    "@types/dockerode": "^2.5.11",
     "@types/express": "^4.16.1",
     "@types/react-monaco-editor": "^0.16.0",
     "@types/socket.io-client": "^1.4.32",
