--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@zeit/next-typescript": "^1.1.0",
     "express": "^4.16.4",
     "monaco-editor-webpack-plugin": "^1.7.0",
-    "monaco-languageclient": "^0.9.0",
     "next": "^7.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-monaco-editor": "^0.22.0",
     "react-split-pane": "^0.1.85",
-    "socket.io-client": "^2.2.0",
-    "styled-components": "^4.1.3"
+    "reactjs-popup": "^1.3.2",
+    "styled-components": "^4.1.3",
+    "xterm": "^3.10.1"
   },
   "devDependencies": {
     "@types/next": "^7.0.0",
