--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-  "scripts": {
-    "dev": "nodemon",
-    "build": "next build && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node dist/index.js"
-  },
-  "dependencies": {
-    "@types/dockerode": "^2.5.11",
-    "@types/express": "^4.16.1",
-    "@types/react-monaco-editor": "^0.16.0",
-    "@types/socket.io-client": "^1.4.32",
-    "@types/styled-components": "^4.1.6",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-typescript": "^1.1.0",
-    "express": "^4.16.4",
-    "monaco-editor-webpack-plugin": "^1.7.0",
-    "next": "^7.0.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-monaco-editor": "^0.22.0",
-    "react-split-pane": "^0.1.85",
-    "reactjs-popup": "^1.3.2",
-    "styled-components": "^4.1.3",
-    "xterm": "^3.10.1"
-  },
-  "devDependencies": {
-    "@types/next": "^7.0.0",
-    "@types/react": "^16.6.0",
-    "babel-plugin-styled-components": "^1.10.0",
-    "cross-env": "^5.2.0",
-    "nodemon": "^1.18.8",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.2.0"
-  }
+    "scripts": {
+        "dev": "nodemon",
+        "build": "next build && tsc --project tsconfig.server.json",
+        "start": "cross-env NODE_ENV=production node dist/index.js"
+    },
+    "dependencies": {
+        "@types/dockerode": "^2.5.12",
+        "@types/express": "^4.16.1",
+        "@types/react-monaco-editor": "^0.16.0",
+        "@types/react-select": "^2.0.11",
+        "@types/socket.io-client": "^1.4.32",
+        "@types/styled-components": "^4.1.8",
+        "@zeit/next-css": "^1.0.1",
+        "@zeit/next-typescript": "^1.1.0",
+        "express": "^4.16.4",
+        "monaco-editor-webpack-plugin": "^1.7.0",
+        "next": "^7.0.2",
+        "react": "^16.7.0",
+        "react-dom": "^16.7.0",
+        "react-monaco-editor": "^0.22.0",
+        "react-select": "^2.3.0",
+        "react-split-pane": "^0.1.85",
+        "reactjs-popup": "^1.3.2",
+        "styled-components": "^4.1.3",
+        "xterm": "^3.11.0"
+    },
+    "devDependencies": {
+        "@types/next": "^7.0.8",
+        "@types/react": "^16.8.1",
+        "babel-plugin-styled-components": "^1.10.0",
+        "cross-env": "^5.2.0",
+        "nodemon": "^1.18.8",
+        "ts-node": "^8.0.2",
+        "typescript": "^3.3.1"
+    }
 }
