--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "@types/express": "^4.16.1",
         "@types/react-monaco-editor": "^0.16.0",
         "@types/react-select": "^2.0.11",
-        "@types/socket.io-client": "^1.4.32",
         "@types/styled-components": "^4.1.8",
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-typescript": "^1.1.0",
@@ -30,6 +29,8 @@
         "@types/react": "^16.8.1",
         "babel-plugin-styled-components": "^1.10.0",
         "cross-env": "^5.2.0",
+        "eslint": "^5.13.0",
+        "eslint-plugin-react-hooks": "^0.0.0",
         "nodemon": "^1.18.8",
         "ts-node": "^8.0.2",
         "typescript": "^3.3.1"
