--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-typescript": "^1.1.0",
         "express": "^4.16.4",
+        "isomorphic-unfetch": "^3.0.0",
         "monaco-editor-webpack-plugin": "^1.7.0",
-        "next": "^7.0.2",
-        "react": "^16.8.0",
-        "react-dom": "^16.8.0",
+        "next": "^8.0.0",
+        "react": "^16.8.1",
+        "react-dom": "^16.8.1",
         "react-monaco-editor": "^0.22.0",
         "react-select": "^2.3.0",
         "react-split-pane": "^0.1.85",
@@ -26,13 +27,13 @@
     },
     "devDependencies": {
         "@types/next": "^7.0.9",
-        "@types/react": "^16.8.1",
+        "@types/react": "^16.8.2",
         "babel-plugin-styled-components": "^1.10.0",
         "cross-env": "^5.2.0",
         "eslint": "^5.13.0",
-        "eslint-plugin-react-hooks": "^0.0.0",
-        "nodemon": "^1.18.8",
+        "eslint-plugin-react-hooks": "^1.0.1",
+        "nodemon": "^1.18.10",
         "ts-node": "^8.0.2",
-        "typescript": "^3.3.1"
+        "typescript": "^3.3.3"
     }
 }
