--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "OpenStudy",
     "scripts": {
         "dev": "nodemon",
         "build": "next build && tsc --project tsconfig.server.json",
