--- a/package.json
+++ b/package.json
@@ -15,21 +15,26 @@
         "isomorphic-unfetch": "^3.0.0",
         "monaco-editor-webpack-plugin": "^1.7.0",
         "next": "^8.0.3",
-        "react": "^16.8.4",
-        "react-dom": "^16.8.4",
+        "react": "^16.8.5",
+        "react-dom": "^16.8.5",
         "react-monaco-editor": "^0.22.0",
-        "react-split-pane": "^0.1.85",
+        "react-split-pane": "^0.1.87",
         "reactjs-popup": "^1.3.2",
         "styled-components": "^4.1.3",
         "xterm": "^3.12.0"
     },
     "devDependencies": {
-        "@types/next": "^8.0.1",
+        "@types/next": "^8.0.3",
         "@types/react": "^16.8.8",
+        "@typescript-eslint/eslint-plugin": "^1.5.0",
+        "@typescript-eslint/parser": "^1.5.0",
         "babel-plugin-styled-components": "^1.10.0",
         "cross-env": "^5.2.0",
+        "eslint": "^5.15.3",
+        "eslint-plugin-react": "^7.12.4",
+        "eslint-plugin-react-hooks": "^1.6.0",
         "nodemon": "^1.18.10",
         "ts-node": "^8.0.3",
-        "typescript": "^3.3.3333"
+        "typescript": "^3.3.4000"
     }
 }
