--- a/.babelrc
+++ b/.babelrc
@@ -20,7 +20,8 @@
                 "ssr": true,
                 "displayName": true,
                 "preprocess": false
-            }
+            },
+            "babel-plugin-dynamic-import-node"
         ]
     ]
 }
