--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "scripts": {
         "dev": "nodemon",
         "build": "next build && tsc --project tsconfig.server.json",
-        "start": "cross-env NODE_ENV=production node dist/index.js"
+        "start": "cross-env NODE_ENV=production node dist/index.js",
+        "test": "jest"
     },
     "dependencies": {
         "@types/express": "^4.16.1",
@@ -24,16 +25,22 @@
         "xterm": "^3.12.0"
     },
     "devDependencies": {
+        "@types/jest": "^24.0.11",
         "@types/next": "^8.0.3",
         "@types/react": "^16.8.8",
         "@typescript-eslint/eslint-plugin": "^1.5.0",
         "@typescript-eslint/parser": "^1.5.0",
+        "babel-plugin-dynamic-import-node": "^2.2.0",
         "babel-plugin-styled-components": "^1.10.0",
         "cross-env": "^5.2.0",
         "eslint": "^5.15.3",
         "eslint-plugin-react": "^7.12.4",
         "eslint-plugin-react-hooks": "^1.6.0",
+        "jest": "^24.5.0",
+        "jest-dom": "^3.1.3",
         "nodemon": "^1.18.10",
+        "react-hooks-testing-library": "^0.4.0",
+        "react-testing-library": "^6.0.3",
         "ts-node": "^8.0.3",
         "typescript": "^3.3.4000"
     }
