--- a/package.json
+++ b/package.json
@@ -9,39 +9,40 @@
     "dependencies": {
         "@types/express": "^4.16.1",
         "@types/react-monaco-editor": "^0.16.0",
-        "@types/styled-components": "^4.1.12",
+        "@types/styled-components": "^4.1.14",
         "@zeit/next-css": "^1.0.1",
         "@zeit/next-typescript": "^1.1.0",
         "express": "^4.16.4",
         "isomorphic-unfetch": "^3.0.0",
         "monaco-editor-webpack-plugin": "^1.7.0",
-        "next": "^8.0.3",
+        "next": "^8.0.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-monaco-editor": "^0.25.1",
         "react-split-pane": "^0.1.87",
         "reactjs-popup": "^1.3.2",
         "styled-components": "^4.2.0",
-        "xterm": "^3.12.0"
+        "xterm": "^3.12.1"
     },
     "devDependencies": {
         "@types/jest": "^24.0.11",
         "@types/next": "^8.0.3",
-        "@types/react": "^16.8.10",
-        "@typescript-eslint/eslint-plugin": "^1.5.0",
-        "@typescript-eslint/parser": "^1.5.0",
+        "@types/react": "^16.8.13",
+        "@typescript-eslint/eslint-plugin": "^1.6.0",
+        "@typescript-eslint/parser": "^1.6.0",
         "babel-plugin-dynamic-import-node": "^2.2.0",
         "babel-plugin-styled-components": "^1.10.0",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
         "cross-env": "^5.2.0",
         "eslint": "^5.16.0",
         "eslint-plugin-react": "^7.12.4",
         "eslint-plugin-react-hooks": "^1.6.0",
-        "jest": "^24.5.0",
+        "jest": "^24.7.1",
         "jest-dom": "^3.1.3",
-        "nodemon": "^1.18.10",
+        "nodemon": "^1.18.11",
         "react-hooks-testing-library": "^0.4.0",
-        "react-testing-library": "^6.0.3",
+        "react-testing-library": "^6.1.2",
         "ts-node": "^8.0.3",
-        "typescript": "^3.4.1"
+        "typescript": "^3.4.3"
     }
 }
