--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "CodeXE",
+    "license": "MIT",
     "scripts": {
         "dev": "nodemon",
         "build": "next build && tsc --project tsconfig.server.json",
@@ -18,6 +19,7 @@
         "next": "^8.0.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-media": "^1.9.2",
         "react-monaco-editor": "^0.25.1",
         "react-split-pane": "^0.1.87",
         "reactjs-popup": "^1.3.2",
