--- a/now.json
+++ b/now.json
@@ -1,9 +1,11 @@
 {
     "version": 2,
+    "alias": "codexe.run",
     "builds": [
         {
             "src": "package.json",
             "use": "@now/next"
         }
-    ]
+    ],
+    "regions": ["lhr1"]
 }
